Create a Graph Builder for testing purposes